feat: Add login option on frontend

--- a/front/AccessManager/src/styles.scss
+++ b/front/AccessManager/src/styles.scss
@@ -3,6 +3,7 @@
 @use 'styles/spacing.scss';
 @use 'styles/display.scss';
 @use 'styles/sizing.scss';
+@use 'styles/position.scss';
 
 html {
   color-scheme: light ;
